--- a/site-cookbooks/nginx/templates/default/default-site.erb
+++ b/site-cookbooks/nginx/templates/default/default-site.erb
@@ -1,11 +1,6 @@
 server {
-  listen   80;
-  server_name  <%= node['nginx']['servername'] %>;
-
-  access_log  <%= node['nginx']['log_dir'] %>/localhost.access.log;
-
-  location / {
-    root   <%= node['nginx']['default_root'] %>;
-    index  index.html index.htm;
-  }
+  listen 80 default_server;
+  server_name _;
+  deny all;
 }
+
