--- a/site-cookbooks/my-nginx/templates/default/nginx.conf.erb
+++ b/site-cookbooks/my-nginx/templates/default/nginx.conf.erb
@@ -3,7 +3,7 @@
 #   * Official Russian Documentation: http://nginx.org/ru/docs/
 
 user              nginx;
-worker_processes   <%= node['nginx']['worker_processes'] %>;
+worker_processes   <%= node['my-nginx']['worker_processes'] %>;
 
 error_log  <%= node['nginx']['log_dir'] %>/error.log;
 #error_log  /var/log/nginx/error.log  notice;
