setup create database and deployscript

--- a/site-cookbooks/my_nginx/templates/default/app-site.erb
+++ b/site-cookbooks/my_nginx/templates/default/app-site.erb
@@ -1,5 +1,5 @@
 upstream <%= node['my_nginx']['app'] %> {
-  server unix:///var/www/<%= node['my_nginx']['app'] %>/shared/sockets/puma.sock fail_timeout=0;
+  server unix:///var/www/<%= node['my_nginx']['app'] %>/shared/tmp/sockets/puma.sock fail_timeout=0;
 }
 
 server {
